# navigation_oru-release

./: LICENSE  README.md  Trajectories.txt  path_off.txt  path_ori.txt
navigation_oru/: CHANGELOG.rst  CMakeLists.txt  package.xml
orunav_constraint_extract/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
orunav_constraint_extract/gnuplot/: eval_path_all_constraints_basementmap.eps  eval_path_all_constraints_basementmap.gnuplot
orunav_constraint_extract/launch/: generate_lookup.launch  grid_map_collision_test.launch  grid_map_collision_test.rviz  polygonfootprint_test.launch  polygonfootprint_test.rviz
orunav_constraint_extract/src/: grid_map.cpp  model_only.cpp  polygonconstraint_service.cpp  polygonfootprint_client.cpp  polygonfootprint_service.cpp
orunav_constraint_extract/test/: ac_test.path  grid_map_collision_test.cpp  robot_model2d_test.cpp  serialization_test.cpp
orunav_conversions/: CHANGELOG.rst  CMakeLists.txt  package.xml
orunav_coordinator_fake/: CHANGELOG.rst  CMakeLists.txt  package.xml
orunav_coordinator_fake/src/: coordinator_fake_node.cpp
orunav_debug/: CHANGELOG.rst  CMakeLists.txt  package.xml
orunav_debug/launch/: control_debug.rviz  controller_debug.launch
orunav_debug/src/: control_log_parser_main.cpp
orunav_debug/test/: README.txt
orunav_fork_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
orunav_fork_control/launch/: fork_control_sim.launch
orunav_fork_control/src/: ForkControlSim.hh  fork_control_client_main.cpp  fork_control_sim_main.cpp
orunav_generic/: CHANGELOG.rst  CMakeLists.txt  package.xml
orunav_generic/test/: path.txt  random_test.cc  serialization_test.cc
orunav_geometry/: CHANGELOG.rst  CMakeLists.txt  package.xml
orunav_geometry/src/: b_spline.cpp  b_spline2d.cpp  pallet_model_2d.cpp  polygon.cpp  robot_model_2d.cpp
orunav_geometry/test/: polygon2_test.cpp  polygon_test.cpp
orunav_launch/: CHANGELOG.rst  CMakeLists.txt  package.xml
orunav_launch/launch/: cititruck_sim.launch  click_n_pick.launch  click_n_pick_sim.launch  iliad_single_truck.launch  iliad_single_truck_sim_multimaster.launch  motion_planning_and_control.launch  motion_planning_and_control_smp.launch  multiple_trucks.launch  multiple_trucks_robot_lab.launch  ndt_mcl_roblab.launch  pallet_detection.launch  real_single_truck_rob_lab_iliad_smp.launch  single_truck.launch  single_truck_iliad_smp.launch  single_truck_manipulator.launch  single_truck_robot_lab.launch
orunav_manipulator_control/: CMakeLists.txt  package.xml
orunav_manipulator_control/launch/: manipulator_control.launch
orunav_manipulator_control/resources/: output.xml
orunav_manipulator_control/src/: manipulator_control.cpp  manipulator_control_main.cpp
orunav_manipulator_control/tests/: manipulator_control_status_parser.cpp  manipulator_control_test.cpp
orunav_motion_planner/: CHANGELOG.rst  CMakeLists.txt  package.xml  test  test.cpp
orunav_motion_planner/Primitives/: CiTiTruck_16_1_4.0_0.2.reduced.adat  CiTiTruck_Expanded10+20_16_1_4.0_0.2.reduced.adat  HX_4WS_4ws.adat  HX_4WS_4ws.mprim  HX_4WS_4wsMINI.adat  xa15.adat
orunav_motion_planner/src/: ARAStarPathPlanner.cpp  AStar.cpp  AStarPathPlanner.cpp  CarConfiguration.cpp  CarModel.cpp  CollisionDetector.cpp  Configuration.cpp  DiscWorldVisualizer.cpp  DualSteerConfiguration.cpp  DualSteerModel.cpp  LHDConfiguration.cpp  LHDModel.cpp  MapGenerators.cpp  ModelUtilities.cpp  MotionPrimitiveData.cpp  MotionPrimitiveSelector.cpp  PathFinder.cpp  PathNode.cpp  UnicycleConfiguration.cpp  UnicycleModel.cpp  Utils.cpp  VehicleMission.cpp  VehicleModel.cpp  World.cpp  WorldOccupancyMap.cpp  WorldParameters.cpp  create_heuristic_main.cpp  get_path_client.cpp  get_path_service.cpp  primitives_pruning_main.cpp  test.cpp
orunav_mpc/: CHANGELOG.rst  CMakeLists.txt  Doxyfile  package.xml
orunav_mpc/formulations/: Makefile  formulation.tex
orunav_mpc/func_gen/: Makefile  form_car_T_Sx0.mpl  form_car_T_Sx0_15.c  form_car_T_Sx0_20.c  form_car_T_Sx0_25.c  form_car_T_Sx0_30.c  form_car_T_Sx0_5.c  form_car_data.mpl  func_gen.h
orunav_mpc/launch/: citi1.launch  citi1_simulation.launch  citi2_simulation.launch  citi3_simulation.launch
orunav_mpc/qpOASES/: CMakeLists.txt  Makefile
orunav_mpc/src/: #threadData.cpp#  ROSSensorSubscriber.cpp  ROSSensorSubscriber.h  _doxygen.h  canSensorReader.cpp  canSensorReader.h  canlibWrapper.cpp  canlibWrapper.h  command.cpp  command.h  commandSender.cpp  commandSender.h  commonDefines.h  config.h  config.h.in  control.h  controller.cpp  controller.h  headers_eigen.h  headers_ros.h  navserverConnection.cpp  navserverConnection.h  parameters.h  previewWindow.h  qpConstraints.cpp  qpConstraints.h  qpProblem.cpp  qpProblem.h  sharedAccess.cpp  sharedAccess.h  snowWhite.cpp  state.cpp  state.h  swLogger.cpp  swLogger.h  swTimer.h  threadData.cpp  threadData.h  threadPool.h  trajectory.cpp  (+9 more)
orunav_mpc/test/: Makefile  defines.h  test_01_telnet.cpp  test_02_can.cpp  test_03_maple.cpp  test_04_qp.cpp  test_05_qpc.cpp  test_06_canread.cpp  test_07_chpos.cpp  test_08_traj_smooth.cpp  utility.h  utility_qp.h
orunav_mpc/traj_gen/: Makefile  form_preview_dyn.m  output_trajectory.m  plan_car_trajectory.m  test_04_qp.m  test_05_qpc.m  test_follow.m  test_symb.m  traj_01_straight.m  traj_02_curve.m  traj_03_fakeeight.m  trajectory_01.txt  trajectory_01_offset.txt  trajectory_02.txt  trajectory_02_offset.txt  trajectory_03.txt
orunav_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
orunav_msgs/msg/: ActivePolygonConstraints.msg  ActiveRobots.msg  BrakeCommand.msg  ComputeTaskStatus.msg  ControllerCommand.msg  ControllerConstraints.msg  ControllerReport.msg  ControllerState.msg  ControllerTrajectoryChunk.msg  ControllerTrajectoryChunkVec.msg  ControllerTrajectoryStep.msg  ControllerTrajectoryValue.msg  ControllerVelocities.msg  CoordinatorTime.msg  CoordinatorTimeVec.msg  (+45 more)
orunav_node_utils/: CHANGELOG.rst  CMakeLists.txt  package.xml
orunav_pallet_detection_sdf/: CHANGELOG.rst  CMakeLists.txt  README.md  notes  package.xml
orunav_params/: CHANGELOG.rst  CMakeLists.txt  package.xml
(+1043 files in other folders)
