<?xml version="1.0"?>
<package>
  <name>orunav_debug</name>
  <version>0.4.0</version>
  <description>The orunav_debug package</description>

  <maintainer email="henrik.andreasson@oru.se">Henrik Andreasson</maintainer>
  <license>TODO</license>

  <build_depend>cmake_modules</build_depend>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>orunav_msgs</build_depend>
  <build_depend>orunav_generic</build_depend>
  <build_depend>orunav_rviz</build_depend>
  <build_depend>orunav_conversions</build_depend>
  <build_depend>orunav_geometry</build_depend>
  <build_depend>orunav_node_utils</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>boost</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>orunav_msgs</run_depend>
  <run_depend>orunav_generic</run_depend>
  <run_depend>orunav_rviz</run_depend>
  <run_depend>orunav_conversions</run_depend>
  <run_depend>orunav_geometry</run_depend>
  <run_depend>orunav_node_utils</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>boost</run_depend>
  <run_depend>tf</run_depend>

  <export>
  </export>
</package>
