<?xml version="1.0"?>
<package>
  <name>orunav_generic</name>
  <version>0.4.0</version>
  <description>The orunav_generic package</description>

  <maintainer email="henrik.andreasson@oru.se">Henrik Andreasson</maintainer>
  <license>TODO</license>

  <build_depend>cmake_modules</build_depend>

  <buildtool_depend>catkin</buildtool_depend>
  
  <build_depend>angles</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>boost</build_depend>
  
  <run_depend>angles</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>boost</run_depend>
  

  <export>
    <cpp cflags="-I${prefix}/include" />
  </export>
</package>
