<?xml version="1.0"?>
<package>
  <name>orunav_geometry</name>
  <version>0.0.1</version>
  <description>The orunav_geometry package</description>

  <maintainer email="henrik.andreasson@oru.se">Henrik Andreasson</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>orunav_generic</build_depend>
  <build_depend>orunav_conversions</build_depend>

  <run_depend>orunav_generic</run_depend>
  <run_depend>orunav_conversions</run_depend>
  
  <build_depend>angles</build_depend>
  <run_depend>angles</run_depend>

  <export>
    <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -Wl,-rpath,${prefix}/lib -lorunav_geometry" />

  </export>
</package>
