<?xml version="1.0"?>
<package>
  <name>orunav_manipulator_control</name>
  <version>0.2.1</version>
  <description>The orunav_manipulator_control package</description>

  <maintainer email="ale.settimi@gmail.com">Alessandro Settimi</maintainer>
  <license>TODO</license>

  <build_depend>cmake_modules</build_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>orunav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>orunav_generic</build_depend>
  <build_depend>orunav_rviz</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>boost</build_depend>
  <!--<build_depend>lwr_controllers</build_depend>-->

  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>orunav_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>orunav_generic</run_depend>
  <run_depend>orunav_rviz</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>boost</run_depend>
  <!--<run_depend>lwr_controllers</run_depend>-->

  <export>

  </export>
</package>
