<?xml version="1.0"?>
<package>
  <name>orunav_motion_planner</name>
  <version>0.4.0</version>
  <description>The orunav_motion_planner package, the core was developped by Marcello Cirillo</description>

  <maintainer email="henrik.andreasson@oru.se">Henrik Andreasson</maintainer>
  <license>TODO</license>

  <build_depend>cmake_modules</build_depend>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>orunav_msgs</build_depend>
  <build_depend>orunav_generic</build_depend>
  <build_depend>orunav_rviz</build_depend>
  <build_depend>orunav_conversions</build_depend>
  <build_depend>orunav_geometry</build_depend>
  <build_depend>eigen</build_depend>
  <build_depend>boost</build_depend>
  
  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>orunav_msgs</run_depend>
  <run_depend>orunav_generic</run_depend>
  <run_depend>orunav_rviz</run_depend>
  <run_depend>orunav_conversions</run_depend>
  <run_depend>orunav_geometry</run_depend>
  <run_depend>eigen</run_depend>
  <run_depend>boost</run_depend>
  
  <export>
    <cpp cflags="-I${prefix}/include" lflags="-L${prefix}/lib -Wl,-rpath,${prefix}/lib -lorunav_motion_planner"/>
    
  </export>
</package>
